--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 nav {
-    background-color: darkblue;
+    background-color: rgb(0, 139, 116);
     text-align: center;
     padding: 10px 0; /* Espaciado vertical */
     position: sticky;
