--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,8 @@ body {
 }
 
 nav {
-    background-color: rgb(0, 139, 116);
+    background: linear-gradient(blue,red);
+    /*background-color: rgb(0, 139, 116);*/
     text-align: center;
     padding: 10px 0; /* Espaciado vertical */
     position: sticky;
@@ -31,7 +32,7 @@ nav a {
     text-decoration: none;
     text-transform: uppercase;
     margin: 0 15px;
-    font-size: 1rem;
+    font-size: 1.0rem;
     display: inline-block;
     padding: 5px 0;
 }
@@ -48,24 +49,25 @@ nav div {
     padding: 0 20px;
 }
 .navigation a:hover {
-    background-color: rgb(255, 255, 255);
+    background:linear-gradient(crimson,white);
     color: black;
-    border: 1px white solid;
+    /*border: 1px white solid;*/
     text-decoration: underline;
+    
 }
 
 .hover-effect {
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  transition: transform 0.5s ease, box-shadow 0.3s ease;
 }
 
 .hover-effect:hover {
-  transform: scale(1.1);
+  /*transform: scale(1.1);*/
   box-shadow: 0 6px 14px rgba(0, 0, 0, 0.2);
 }
 
 
 footer {
-    background-color: black;
+    background:linear-gradient(red,violet);
     height: 50px;
     position: sticky;
     bottom: 0;
@@ -85,6 +87,22 @@ footer {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: large;
 }
+.titulogrilla h4:hover{
+    color:blueviolet;
+    text-shadow: 1.5;
+   
+   
+}
+/*Formulario*/
+.campoform{
+    background: linear-gradient(red,rgb(128, 128, 128));
+    
+   
+}
+.fondocontacto{
+    background:linear-gradient(red,gray);
+}
+
 
 
 /* Responsive: Ajustes para pantallas pequeñas */
