--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,25 @@
 }
 
 body {
-    background-color: #eee;
+    background:linear-gradient(black,blueviolet,black);
     font-family: Arial, sans-serif; 
+}
+.titulo{
+    
+    text-align: center;
+    background:linear-gradient(cyan,green);
+}
+.titulo h1{
+  color:rgb(51, 51, 51);
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: big;
+    text-align: center;  
+}
+.menu{
+    background:linear-gradient(blueviolet,cyan);
+}
+.menuContainer{
+    background:linear-gradient(navajowhite,ghostwhite)
 }
 
 nav {
